test/1.2/errors/T_EDEVICE.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
/// ERROR EDEVICE
parameter x;
